Add Docker setup for frontend backend and MySQL persistence